finished Angular Assignment

--- a/src/app/modules/market/products-page/products-page.component.html
+++ b/src/app/modules/market/products-page/products-page.component.html
@@ -1,1 +1,4 @@
-<p>products-page works!</p>
+<app-category-menu
+  [categories]="categories"
+  (categoryChanged)="onCategoryChanged($event)">
+</app-category-menu>
