--- a/src/app/modules/market/category-menu/category-menu.component.html
+++ b/src/app/modules/market/category-menu/category-menu.component.html
@@ -1,1 +1,7 @@
-<p>category-menu works!</p>
+<ul>
+    <li *ngFor="let c of categories">
+      <app-category-menu-item [categoryName]="c.name" (selected)="onCategorySelected($event)">
+      </app-category-menu-item>
+    </li>
+  </ul>
+  
