--- a/src/app/modules/shared/header/header.component.css
+++ b/src/app/modules/shared/header/header.component.css
@@ -1,32 +1,36 @@
 .app-header {
-    height: 200px;
-    border-bottom: 1px solid black;
-  }
-    
-  .app-header::after {
-    content: "";
-    height: 200px;
-    opacity: 0.5;
-    background: url('../../../../assets/herobg.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: -1;   
-  }
-    
-  .app-logo {
-    height: 80px;
-    margin-left: 50px;
-  }
-    
-  .app-slogan {
-    font-family: 'Comic Sans MS', 'Comic Sans', cursive;
-    font-weight: bold;
-    margin-left: 5px;
-  }
+  height: 200px;
+  border-bottom: 1px solid black;
+}
   
+.app-header::after {
+  content: "";
+  height: 200px;
+  opacity: 0.9;
+  background: url('../../../../assets/herobg.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;   
+}
+  
+.app-logo {
+  height: 80px;
+  margin-left: 50px;
+}
+  
+.app-slogan {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  margin-left: 100px;
+  font-size: 40px;
+  font-weight: 500;
+  font-weight: bold;
+  font-style: italic;
+  color: rgb(236, 175, 61);
+}
