--- a/src/app/modules/shared/header/header.component.html
+++ b/src/app/modules/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="app-header app-bg">
     <div class="maxHeight flex flex-align-items--center">
       <img src="../../../../assets/logo.png" class="app-logo" />
-      <span class="app-slogan">Shop 'till you Drop</span>
+      <span class="app-slogan">EJ's Asian Marketplace</span>
     </div>
   </header>
   
