--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
+<h1>Welcome to EJ's Food Marketplace</h1>
+
 <app-header></app-header>
-<div class="main-area">
-  <app-products-page></app-products-page>
-</div>
+
+<router-outlet></router-outlet>
