--- a/src/app/modules/market/category-menu-item/category-menu-item.component.css
+++ b/src/app/modules/market/category-menu-item/category-menu-item.component.css
@@ -4,6 +4,7 @@
   align-items: center;
   width: 100px;      
   height: 45px;     
+  background-color: rgb(214, 120, 32);
   border: 1px solid black;
   cursor: pointer;
   margin-bottom: 5px; 
